--- a/home/homeindex.html
+++ b/home/homeindex.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
+    <img src="../home/alligned.png" alt="">
     <h1>BETIC Training Center</h1>
 </body>
 </html>
