--- a/home/homeindex.html
+++ b/home/homeindex.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-    <img src="../home/alligned.png" alt="">
+    <img src="../home/alligned.png" alt="AHA logo">
     <h1>BETIC Training Center</h1>
+    <p class="services">American Heart Association Certification in BLS Basic Life Support, CPR, ACLS Advance Cardio Life support, PALS Pediatric Advance Life Support, First Aid, BLS Renewal, ACLS Renewal and PALS Renewal
+
+    </p>
+
+    <p class="certificates">All Certifications are issued immediately at the completion of the class. American Heart Ecards certification, with its added security, authenticity can be verified at American Heart Association ECC website. 
+        AHA Certifications are valid for 2 years. </p>
+    <button>Home</button>
+    <button>class room courses</button>
+    <button>Blended AHA online courses</button>
+    <button>Instructor courses</button>
+    <button>FAQ</button>
+    <button>AHA Ecards</button>
+    <button>More</button>
+    
 </body>
 </html>
