--- a/home/homeindex.html
+++ b/home/homeindex.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-    <img src="../home/alligned.png" alt="AHA logo">
+    <header>
+        <img class="alligned" src="../home/alligned.png" alt="AHA logo">
+    </header>
     <h1>BETIC Training Center</h1>
     <p class="services">American Heart Association Certification in BLS Basic Life Support, CPR, ACLS Advance Cardio Life support, PALS Pediatric Advance Life Support, First Aid, BLS Renewal, ACLS Renewal and PALS Renewal
 
@@ -21,7 +23,10 @@
     <button>Instructor courses</button>
     <button>FAQ</button>
     <button>AHA Ecards</button>
-    <button>More</button>
+    <button>More</button><br>
+
+    <img class="CPR" src="../home/CPR.jpeg" alt="CPR">
+
     
 </body>
 </html>
