--- a/home/homeindex.html
+++ b/home/homeindex.html
@@ -11,12 +11,13 @@
         <img class="alligned" src="../home/alligned.png" alt="AHA logo">
     </header>
     <h1>BETIC Training Center</h1>
+    <button>Call Us</button>
+    <button>Access your AHA Ecard</button>
     <p class="services">American Heart Association Certification in BLS Basic Life Support, CPR, ACLS Advance Cardio Life support, PALS Pediatric Advance Life Support, First Aid, BLS Renewal, ACLS Renewal and PALS Renewal
 
     </p>
 
-    <p class="certificates">All Certifications are issued immediately at the completion of the class. American Heart Ecards certification, with its added security, authenticity can be verified at American Heart Association ECC website. 
-        AHA Certifications are valid for 2 years. </p>
+    <p class="certificates">All Certifications are issued immediately at the completion of the class. American Heart Ecards certification, with its added security, authenticity can be verified at <a href="https://atlas.heart.org/home"> American Heart Association ECC website.</a> AHA Certifications are valid for 2 years. </p>
     <button>Home</button>
     <button>class room courses</button>
     <button>Blended AHA online courses</button>
