--- a/home/homeindex.html
+++ b/home/homeindex.html
@@ -9,8 +9,12 @@
 <body>
     <header>
         <img class="alligned" src="../home/alligned.png" alt="AHA logo">
+
+        <h1 class="container">BETIC Training Center</h1>
+
     </header>
-    <h1>BETIC Training Center</h1>
+    <main>
+    
     <button>Call Us</button>
     <button>Access your AHA Ecard</button>
     <p class="services">American Heart Association Certification in BLS Basic Life Support, CPR, ACLS Advance Cardio Life support, PALS Pediatric Advance Life Support, First Aid, BLS Renewal, ACLS Renewal and PALS Renewal
@@ -38,13 +42,20 @@
         A fee will be charged for another certification. </p>
 
         <!-- button,h2,p inside one box-->
-        <button >Instructor-Led Classes</button> <!--button will link to class room courses page-->
-        <h2>All in Classroom</h2>
-        <p>Everything will be done in the classroom including skills and Written Exams with the help of our AHA Certified Instructors.
+        <article class="container">
+         <!--button will link to class room courses page-->
+        <h2>
+            All in Classroom
+        </h2>
+        <p>
+            Everything will be done in the classroom including skills and Written Exams with the help of our AHA Certified Instructors.
 
             Made easy and faster process. Following all CDC safety guidelines.</p>
+            <button >Instructor-Led Classes
+            </button>    
+        </article>    
 
-
+    </main>       
     
 </body>
 </html>
