--- a/home/homeindex.html
+++ b/home/homeindex.html
@@ -10,6 +10,8 @@
     <header>
         <img class="alligned" src="../home/alligned.png" alt="AHA logo">
 
+        <button>Sign In / Sign Up</button> <!--link to sign in page-->
+
         <h1 class="container">BETIC Training Center</h1>
 
     </header>
