--- a/home/signin.html
+++ b/home/signin.html
@@ -1,1 +1,18 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>sign in</title>
+    <link rel="stylesheet" href="css/signin.css">
+</head>
+<body>
+    <header><img src="../home/alligned.png" alt=""></header>
+    <main>
+        <h1>Sign In or Create an Account</h1>
+        <h2>* indicates a required field</h2>
+    </main>
+    
+</body>
+</html>
