--- a/home/homeindex.html
+++ b/home/homeindex.html
@@ -6,6 +6,26 @@
     <title>BETIC Training Center</title>
     <link rel="stylesheet" href="css/home.css">
 </head>
+
+<!-- <header class="header">
+        <h1 class="header__h1">BETIC Training Center</h1>
+        <nav class="header__nav">
+            <ul class="header__ul">
+                <li>
+                    <a href="#menu">Menu</a>
+                </li>
+                <li>
+                    <a href="hours.html">Hours</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+            </ul>
+        </nav>
+    </header>-->
 <body>
     <header>
 
