--- a/home/index.html
+++ b/home/index.html
@@ -7,31 +7,37 @@
     <link rel="stylesheet" href="css/home.css">
 </head>
 
-<!-- <header class="header">
+ <header class="header">
         <h1 class="header__h1">BETIC Training Center</h1>
         <nav class="header__nav">
             <ul class="header__ul">
                 <li>
-                    <a href="#menu">Menu</a>
+                    <a href="#signUp.html">Sign In / Sign Up</a>
                 </li>
                 <li>
-                    <a href="hours.html">Hours</a>
+                    <a href="#Home.html">Home</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact</a>
+                    <a href="#classRoom.html">class room courses</a>
                 </li>
                 <li>
-                    <a href="about.html">About</a>
+                    <a href="blendedCourses.html">Blended AHA online courses</a>
+                </li>
+                <li>
+                    <a href="instructorCourses.html">Instructor courses</a>
+                </li>
+                <li>
+                    <a href="about.html">About Us</a>
                 </li>
             </ul>
         </nav>
-    </header>-->
+    </header>
 <body>
     <header>
 
         <h1 class="container">BETIC Training Center <img class="alligned" src="../home/alligned.png" alt="AHA logo"></h1>
 
-        <button>Sign In / Sign Up</button> <!--link to sign in page-->
+        <!--<button>Sign In / Sign Up</button> link to sign in page-->
 
     </header>
     <main>
@@ -42,14 +48,14 @@
 
     </p>
  <!--To do: make these two paragraphs beside each other-->
-    <p class="intro">All Certifications are issued immediately at the completion of the class. American Heart Ecards certification, with its added security, authenticity can be verified at <a href="https://atlas.heart.org/home"> American Heart Association ECC website.</a> AHA Certifications are valid for 2 years. </p>
+  <!--   <p class="intro">All Certifications are issued immediately at the completion of the class. American Heart Ecards certification, with its added security, authenticity can be verified at <a href="https://atlas.heart.org/home"> American Heart Association ECC website.</a> AHA Certifications are valid for 2 years. </p>
     <button>Home</button>
     <button>class room courses</button>
     <button>Blended AHA online courses</button>
     <button>Instructor courses</button>
     <button>FAQ</button>
     <button>AHA Ecards</button>
-    <button>More</button><br>
+    <button>More</button><br> -->
 
     <img class="CPR" src="../home/CPR.jpeg" alt="CPR">
 
