--- a/home/index.html
+++ b/home/index.html
@@ -12,7 +12,7 @@
         <nav class="header__nav">
             <ul class="header__ul">
                 <li>
-                    <a href="#signUp.html">Sign In / Sign Up</a>
+                    <a href="#signIn.html">Sign In / Sign Up</a>
                 </li>
                 <li>
                     <a href="#Home.html">Home</a>
