--- a/betic/index.html
+++ b/betic/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Mohammad kamal">
+    <meta name="description" content="BTEIC training center official website">
     <title>BETIC Training Center</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -35,9 +37,8 @@
 <body>
     <header>
 
-        <h1 class="container">BETIC Training Center <img class="alligned" src="../home/alligned.png" alt="AHA logo"></h1>
+        <h1>BETIC Training Center</h1>
 
-        <!--<button>Sign In / Sign Up</button> link to sign in page-->
 
     </header>
     <main>
