--- a/betic/signIn.html
+++ b/betic/signIn.html
@@ -1,12 +1,14 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sign in</title>
-    <link rel="stylesheet" href="css/signin.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Mohammad kamal">
+        <meta name="description" content="signin to training center">
+        <title>Sign in </title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 
 <body>
 
