--- a/betic/signIn.html
+++ b/betic/signIn.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Mohammad kamal">
         <meta name="description" content="signin to training center">
-        <title>Sign in </title>
+        <title>Sign In Sign Up </title>
         <link rel="stylesheet" href="css/style.css">
     </head>
 
 <body>
 
-    <header>
+    <!-- <header>
         <img src="../home/alligned.png" alt="">
     </header>
 
@@ -29,6 +29,6 @@
         </form>
 
         
-    </main>
+    </main> -->
 </body>
 </html>
