--- a/betic/classRoom.html
+++ b/betic/classRoom.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class Room courses</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Mohammad kamal">
+        <meta name="description" content="Classroom courses">
+        <title>BETIC Training Center Classroom Courses/title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 <body>
     <main>
         <h1>American Heart Association
