--- a/betic/index.html
+++ b/betic/index.html
@@ -34,6 +34,15 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <figure>
+            <img src="img/tacos_and_drink_1000x667.png" alt="Tacos and a Drink" title="We love tacos!" width="1000"
+                height="667">
+            <figcaption class="offscreen">
+                Tacos and a Drink
+            </figcaption>
+        </figure>
+    </section>
 <body>
     <header>
 
