--- a/betic/instructorCourses.html
+++ b/betic/instructorCourses.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Mohammad kamal">
+        <meta name="description" content="Instructor Courses">
+        <title>BETIC Training Center Instructor Courses</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 <body>
     
 </body>
