--- a/betic/about.html
+++ b/betic/about.html
@@ -9,6 +9,47 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
 <body>
+    <header class="header">
+        <h1 class="header__h1">BETIC Training Center</h1>
+        <nav class="header__nav">
+            <ul class="header__ul">
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="#signIn.html">Sign In / Sign Up</a>
+                </li>
+                <li>
+                    <a href="/#index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#classRoom.html">class room courses</a>
+                </li>
+                <li>
+                    <a href="blendedCourses.html">Blended AHA online courses</a>
+                </li>
+                <li>
+                    <a href="instructorCourses.html">Instructor courses</a>
+                </li>
+               
+                <li>
+                    <a href="contact.html">contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <h2 class="hero__h2">Wellcome To BETIC</h2>
+        <figure>
+            <img src="../betic/image/save a life.png" alt="Save a life" title="save a life"
+             width="1000"
+                height="667">
+            <figcaption class="offscreen">
+                learn to save a life<!-- Tacos and a Drink -->
+            </figcaption>
+        </figure>
+    </section>
     
 </body>
 </html>
