--- a/betic/index.html
+++ b/betic/index.html
@@ -17,7 +17,7 @@
                     <a href="#signIn.html">Sign In / Sign Up</a>
                 </li>
                 <li>
-                    <a href="#Home.html">Home</a>
+                    <a href="#index.html">Home</a>
                 </li>
                 <li>
                     <a href="#classRoom.html">class room courses</a>
@@ -31,15 +31,21 @@
                 <li>
                     <a href="about.html">About Us</a>
                 </li>
+                <li>
+                    <a href="contact.html">contact</a>
+                </li>
             </ul>
         </nav>
     </header>
-    <section>
+
+    <section class="hero">
+        <h2 class="hero__h2">Wellcome To BETIC</h2>
         <figure>
-            <img src="img/tacos_and_drink_1000x667.png" alt="Tacos and a Drink" title="We love tacos!" width="1000"
+            <img src="../betic/image/save a life.png" alt="Save a life" title="save a life"
+             width="1000"
                 height="667">
             <figcaption class="offscreen">
-                Tacos and a Drink
+                learn to save a life<!-- Tacos and a Drink -->
             </figcaption>
         </figure>
     </section>
